fix project longdesc

--- a/src/components/pages/demarche-eco-conception/Content.astro
+++ b/src/components/pages/demarche-eco-conception/Content.astro
@@ -11,9 +11,7 @@ import Block from "./Block.astro";
       Mesures sur ce site
     </h2>
 
-    <div
-      class="col-span-full md:col-span-2 lg:col-start-2 lg:col-span-3 mb-5 md:mb-0"
-    >
+    <div class="col-span-full md:col-span-3 lg:col-start-2 lg:col-span-4">
       <div class="md:h-full bg-surface5 p-8 rounded-[26px]">
         <h3 class="text-label-large mb-5">Score EcoIndex moyen d’une page</h3>
         <p class="text-headline-medium-bold mb-8">B (76,4/100)</p>
@@ -24,7 +22,7 @@ import Block from "./Block.astro";
       </div>
     </div>
 
-    <div class="col-span-full md:col-span-2 lg:col-span-3 mb-5 md:mb-0">
+    <div class="col-span-full md:col-span-3 lg:col-span-4">
       <div class="md:h-full bg-surface5 p-8 rounded-[26px]">
         <h3 class="text-label-large mb-5">Score EcoGrader moyen d’une page</h3>
         <p class="text-headline-medium-bold mb-8">99/100</p>
@@ -34,7 +32,7 @@ import Block from "./Block.astro";
       </div>
     </div>
 
-    <div class="col-span-full md:col-span-2 lg:col-span-3 mb-5 md:mb-0">
+    <div class="col-span-full md:col-span-3 lg:col-start-2 lg:col-span-4">
       <div class="md:h-full bg-surface5 p-8 rounded-[26px]">
         <h3 class="text-label-large mb-5">Poids moyen d’une page</h3>
         <p class="text-headline-medium-bold mb-8">138,7 ko</p>
@@ -45,15 +43,17 @@ import Block from "./Block.astro";
       </div>
     </div>
 
-    <div class="col-span-full lg:col-start-2 lg:lg:col-span-9 mb-5">
-      <div class="bg-surface5 p-8 rounded-[26px]">
-        <h3 class="text-label-large mb-2.5">
+    <div class="col-span-full md:col-span-3 lg:col-span-4">
+      <div class="md:h-full bg-surface5 p-8 rounded-[26px]">
+        <h3 class="text-label-large mb-5">
           Scores PageSpeed moyens d’une page
         </h3>
-        <h3 class="text-label-small mb-5">
+        <p class="text-headline-medium-bold mb-8">
+          100/100 - 100/100 - 100/100
+        </p>
+        <p class="text-label-medium">
           Performance - Accessibilité - Bonnes pratiques
-        </h3>
-        <p class="text-headline-medium-bold">100/100 - 100/100 - 100/100</p>
+        </p>
       </div>
     </div>
   </Grid>
