--- a/src/components/pages/demarche-eco-conception/Content.astro
+++ b/src/components/pages/demarche-eco-conception/Content.astro
@@ -7,7 +7,7 @@ import Block from "./Block.astro";
 
 <div class="demarche-eco-conception container">
   <Grid class="gap-y-5">
-    <h2 class="col-span-full lg:col-start-2 mb-10 text-headline-large">
+    <h2 class="col-span-full lg:col-start-2 mb-6 lg:mb-10 text-headline-large">
       Mesures sur ce site
     </h2>
 
