--- a/src/components/pages/homepage/DerriereTeamUX/index.astro
+++ b/src/components/pages/homepage/DerriereTeamUX/index.astro
@@ -187,8 +187,7 @@ const { block1, block2 } = data;
 
                 <Picture
                   src={Commit_DesignEthique}
-                  width={105}
-                  height={49}
+                  class="w-[105px] h-[49px]"
                   alt="Designers Éthiques"
                   densities={[1, 2]}
                 />
