dont specify sizes with density

--- a/src/components/pages/homepage/DerriereTeamUX/index.astro
+++ b/src/components/pages/homepage/DerriereTeamUX/index.astro
@@ -110,24 +110,27 @@ const { block1, block2 } = data;
 
                 <Picture
                   src={Certif_IDF}
-                  width={170}
-                  height={56}
                   alt="Interaction Design Foundation"
+                  class="w-[170px] h-[56px]"
                   densities={[1, 2]}
                 />
               </li>
               <li>
                 <span class="hidden print:inline">W3C</span>
 
-                <Picture src={Certif_W3C} width={90} height={46} alt="W3C" />
+                <Picture
+                  src={Certif_W3C}
+                  alt="W3C"
+                  class="w-[90px] h-[46px]"
+                  densities={[1, 2]}
+                />
               </li>
               <li>
                 <span class="hidden print:inline">Opquast</span>
 
                 <Picture
                   src={Certif_Opquast}
-                  width={140}
-                  height={36}
+                  class="w-[140px] h-[36px]"
                   alt="Opquast"
                   densities={[1, 2]}
                 />
@@ -135,15 +138,19 @@ const { block1, block2 } = data;
               <li>
                 <span class="hidden print:inline">UXer</span>
 
-                <Picture src={Certif_Uxer} width={46} height={47} alt="UXER" />
+                <Picture
+                  src={Certif_Uxer}
+                  alt="UXER"
+                  class="w-[46px] h-[47px]"
+                  densities={[1, 2]}
+                />
               </li>
               <li>
                 <span class="hidden print:inline">SHIFTA by Elisava</span>
 
                 <Picture
                   src={Certif_Shifta}
-                  width={106}
-                  height={40}
+                  class="w-[106px] h-[40px]"
                   alt="Shifta by ELISAVA"
                   densities={[1, 2]}
                 />
@@ -154,8 +161,7 @@ const { block1, block2 } = data;
                 >
                 <Picture
                   src={Certif_INR}
-                  width={120}
-                  height={44}
+                  class="w-[120px] h-[44px]"
                   alt="Institut du Numérique Responsable"
                   densities={[1, 2]}
                 />
@@ -176,8 +182,7 @@ const { block1, block2 } = data;
 
                 <Picture
                   src={Commit_DesignEthico}
-                  width={90}
-                  height={49}
+                  class="w-[90px] h-[49px]"
                   alt="Desino Etico"
                   densities={[1, 2]}
                 />
