project eco disclaimer

--- a/src/components/pages/projets/AllProjects/LargeProject.astro
+++ b/src/components/pages/projets/AllProjects/LargeProject.astro
@@ -192,15 +192,13 @@ const hasManyTestimonials = Array.isArray(project.testimonial) && project.testim
               );
             })}
           </ul>
-          <div class="flex space-x-2.5">
+          <div class="flex max-lg:flex-col max-lg:items-start items-center max-lg:space-y-2.5 lg:space-x-2.5 bg-surface7 px-5 py-5 lg:py-2.5 rounded">
             <span role="presentation">
-              <Icon name="photo_prints" width={24} height={24} />
+              <Icon name="photo_prints" width={38} height={38} />
             </span>
-            <p class="text-neutral1 text-body-small">
+            <p class="text-body-medium">
               Dans une <a href="/demarche-eco-conception" class="text-primary underline underline-offset-[4px] hover:text-secondary">démarche d’éco-responsabilité</a>, nous vous proposons de
-              n’ouvrir
-              <br class="hidden lg:block" />
-              que les galeries et visuels dont vous avez besoin.
+              n’ouvrir que les galeries dont vous avez besoin.
             </p>
           </div>
         </div>
