--- a/src/components/pages/homepage/ProjectsTeasing/index.astro
+++ b/src/components/pages/homepage/ProjectsTeasing/index.astro
@@ -11,7 +11,10 @@ const {
 } = data;
 ---
 
-<section class="overflow-hidden lg:pt-[52px] lg:-mt-[52px]">
+<section
+  id="projects-teasing"
+  class="overflow-hidden lg:pt-[52px] lg:-mt-[52px]"
+>
   <div class="container relative">
     <BackgroundForm1
       class="hidden lg:block absolute z-[-1] top-[95px] left-[-600px]"
@@ -60,7 +63,12 @@ const {
       </li>
     </Grid>
     <div class="flex mb-1.5">
-      <CallToAction href="/projets" class="mx-auto" rightIcon="forward">
+      <CallToAction
+        id="link-to-projects"
+        href="/projets"
+        class="mx-auto"
+        rightIcon="forward"
+      >
         {data.callToAction.label}
       </CallToAction>
     </div>
