--- a/src/components/pages/projets/AllProjects/index.astro
+++ b/src/components/pages/projets/AllProjects/index.astro
@@ -35,7 +35,7 @@ const allProjectsImages = await Astro.glob(
                   />
                 )}
 
-                <ul class="flex flex-col space-y-8">
+                <ul class="large-projects flex flex-col space-y-8">
                   {projectsGroup.projects.map((project) => {
                     return (
                       <li>
@@ -104,7 +104,7 @@ const allProjectsImages = await Astro.glob(
                 )}
 
                 <Grid>
-                  <ul class="col-span-full lg:col-start-2 lg:col-span-10 lg:columns-2 lg:gap-8 space-y-5">
+                  <ul class="small-projects col-span-full lg:col-start-2 lg:col-span-10 lg:columns-2 lg:gap-8 space-y-5">
                     {projectsGroup.projects.map((project) => {
                       return (
                         <li>
