new demarche blocks

--- a/src/components/pages/demarche-eco-conception/Content.astro
+++ b/src/components/pages/demarche-eco-conception/Content.astro
@@ -11,7 +11,7 @@ import Block from "./Block.astro";
       Mesures sur ce site
     </h2>
 
-    <div class="col-span-full md:col-span-3 lg:col-start-2 lg:col-span-4">
+    <div class="col-span-full md:col-span-3 lg:col-start-2 lg:col-span-3">
       <div class="md:h-full bg-surface5 p-8 rounded-[26px]">
         <h3 class="text-label-large mb-5">Score EcoIndex moyen d’une page</h3>
         <p class="text-headline-medium-bold mb-8">B (76,4/100)</p>
@@ -22,7 +22,7 @@ import Block from "./Block.astro";
       </div>
     </div>
 
-    <div class="col-span-full md:col-span-3 lg:col-span-4">
+    <div class="col-span-full md:col-span-3 lg:col-span-3">
       <div class="md:h-full bg-surface5 p-8 rounded-[26px]">
         <h3 class="text-label-large mb-5">Score EcoGrader moyen d’une page</h3>
         <p class="text-headline-medium-bold mb-8">99/100</p>
@@ -32,7 +32,7 @@ import Block from "./Block.astro";
       </div>
     </div>
 
-    <div class="col-span-full md:col-span-3 lg:col-start-2 lg:col-span-4">
+    <div class="col-span-full md:col-span-3 lg:col-span-3">
       <div class="md:h-full bg-surface5 p-8 rounded-[26px]">
         <h3 class="text-label-large mb-5">Poids moyen d’une page</h3>
         <p class="text-headline-medium-bold mb-8">138,7 ko</p>
@@ -43,7 +43,7 @@ import Block from "./Block.astro";
       </div>
     </div>
 
-    <div class="col-span-full md:col-span-3 lg:col-span-4">
+    <div class="col-span-full md:col-span-3 lg:col-start-2 lg:col-span-3">
       <div class="md:h-full bg-surface5 p-8 rounded-[26px]">
         <h3 class="text-label-large mb-5">
           Scores PageSpeed moyens d’une page
@@ -53,6 +53,30 @@ import Block from "./Block.astro";
         </p>
         <p class="text-label-medium">
           Performance - Accessibilité - Bonnes pratiques
+        </p>
+      </div>
+    </div>
+
+    <div class="col-span-full md:col-span-3 lg:col-span-3">
+      <div class="md:h-full bg-surface5 p-8 rounded-[26px]">
+        <h3 class="text-label-large mb-5">
+          Émissions de CO<sub>2</sub> selon GreenFrame
+        </h3>
+        <p class="text-headline-medium-bold mb-8">5.884 mg eq. co2 ± 2.3%</p>
+        <p class="text-label-medium">
+          Pour une prise de contact via page d’accueil puis page projets
+        </p>
+      </div>
+    </div>
+
+    <div class="col-span-full md:col-span-3 lg:col-span-3">
+      <div class="md:h-full bg-surface5 p-8 rounded-[26px]">
+        <h3 class="text-label-large mb-5">
+          Consommation d’énergie selon GreenFrame
+        </h3>
+        <p class="text-headline-medium-bold mb-8">13.311 mWh</p>
+        <p class="text-label-medium">
+          Pour une prise de contact via page d’accueil puis page projets
         </p>
       </div>
     </div>
