--- a/src/components/pages/nos-deux-profils/ItsAMatch.astro
+++ b/src/components/pages/nos-deux-profils/ItsAMatch.astro
@@ -135,7 +135,7 @@ import TeamUXStamp from "components/TeamUXStamp.astro";
 
   ul {
     & li {
-      @apply relative flex flex-col items-center;
+      @apply relative flex flex-col items-center text-center whitespace-nowrap;
 
       width: 200px;
 
