fix hp expertises padding

--- a/src/components/pages/homepage/Expertises/Expertise.astro
+++ b/src/components/pages/homepage/Expertises/Expertise.astro
@@ -34,6 +34,10 @@ const { expertise } = Astro.props;
       padding-left: 11px;
       padding-right: 11px;
     }
+
+    @screen xl {
+      padding: 11px 20px;
+    }
   }
 
   li:first-child {
