--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -7,9 +7,9 @@ import Breadcrumb from "components/Breadcrumb.astro";
 ---
 
 <Layout
-  title="Team UX - Page non trouvée"
+  title="Page non trouvée - Team UX"
   description="Page non trouvée"
-  og_title="Team UX - Page non trouvée"
+  og_title="Page non trouvée - Team UX"
   og_description="Page non trouvée"
 >
   <div class="hidden md:block mb-[90px]">
