--- a/src/pages/temoignages/index.astro
+++ b/src/pages/temoignages/index.astro
@@ -8,7 +8,7 @@ import Layout from "layouts/Layout.astro";
 ---
 
 <Layout
-  title="Team UX - Témoignages UX design"
+  title="Témoignages UX design - Team UX"
   description="Nos clientes et clients nous ont adressé de beaux témoignages suite à nos collaborations pour des projets d’UX design, de design accessible ou d’éco-conception."
   og_title="Témoignages sur Team UX 👋🏻 👋🏼 Design UX en freelance"
   og_description="Découvrez les (beaux) témoignages que nos clientes et clients nous ont adressés suite à notre collaboration. On n’est pas peu fières."
