--- a/src/pages/nos-deux-profils/index.astro
+++ b/src/pages/nos-deux-profils/index.astro
@@ -9,7 +9,7 @@ import ItsAMatch from "components/pages/nos-deux-profils/ItsAMatch.astro";
 ---
 
 <Layout
-  title="Team UX - Profils d’UX designers freelances"
+  title="Profils d’UX designers freelances - Team UX"
   description="Nous sommes Daniela & Yuna, les 2 designers UX seniors qui forment le binôme freelance Team UX. Nous vous présentons nos profils et nos parcours respectifs."
   og_title="Qui se cache derrière Team UX ? 👋🏻 👋🏼  Nos 2 profils"
   og_description="Découvrez-en un peu plus sur Daniela & Yuna, les 2 profils qui forment le binôme Team UX. On vous présente nos 2 parcours d’UX designers seniors."
