--- a/src/pages/notre-manifeste/index.astro
+++ b/src/pages/notre-manifeste/index.astro
@@ -11,9 +11,9 @@ import Signatures from "components/pages/notre-manifeste/Signatures.astro";
 ---
 
 <Layout
-  title="Team UX - Notre manifeste"
+  title="Notre manifeste - Team UX"
   description="Découvrez les convictions qui guident nos choix de conception UX et nos actions au quotidien."
-  og_title="Team UX - Notre manifeste 👊"
+  og_title="Notre manifeste 👊 - Team UX"
   og_description="Découvrez les convictions qui guident nos choix de conception UX et nos actions au quotidien."
 >
   <div class="hidden md:block mb-[90px]">
