--- a/src/pages/plan-du-site/index.astro
+++ b/src/pages/plan-du-site/index.astro
@@ -8,9 +8,9 @@ import Layout from "layouts/Layout.astro";
 ---
 
 <Layout
-  title="Team UX - Plan du site"
+  title="Plan du site - Team UX"
   description="Plan du site team-ux.com."
-  og_title="Team UX - Plan du site"
+  og_title="Plan du site - Team UX"
   og_description="Plan du site team-ux.com."
 >
   <div class="hidden md:block mb-[90px]">
