--- a/src/pages/mentions-legales/index.astro
+++ b/src/pages/mentions-legales/index.astro
@@ -8,9 +8,9 @@ import Content from "components/pages/mentions-legales/Content.astro";
 ---
 
 <Layout
-  title="Team UX - Mentions légales"
+  title="Mentions légales - Team UX"
   description="Page des mentions légales du site team-ux.com."
-  og_title="Team UX - Mentions légales"
+  og_title="Mentions légales - Team UX"
   og_description="Page des mentions légales du site team-ux.com."
 >
   <div class="hidden md:block mb-[90px]">
