--- a/src/pages/demarche-eco-conception/index.astro
+++ b/src/pages/demarche-eco-conception/index.astro
@@ -8,9 +8,9 @@ import Footer from "components/Footer.astro";
 ---
 
 <Layout
-  title="Team UX - Démarche d’éco-conception"
+  title="Démarche d’éco-conception - Team UX"
   description="Ce site est éco-conçu. Découvrez les détails de notre démarche d’éco-conception dans cette déclaration."
-  og_title="Team UX - Démarche d’éco-conception"
+  og_title="Démarche d’éco-conception - Team UX"
   og_description="Ce site est éco-conçu. Découvrez les détails de notre démarche d’éco-conception dans cette déclaration."
 >
   <div class="hidden md:block mb-[90px]">
