feat: manifest colors

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,8 +22,8 @@ const { title, description, og_description, og_title } = Astro.props;
     <meta name="description" content={description} />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <meta name="msapplication-TileColor" content="#08124f" />
-    <meta name="theme-color" content="#08124f" />
+    <meta name="msapplication-TileColor" content="#f5f3eb" />
+    <meta name="theme-color" content="#f5f3eb" />
     <meta property="og:title" content={og_title} />
     <meta property="og:site_name" content="Team UX" />
     <meta property="og:url" content={Astro.site} />
