--- a/src/components/pages/homepage/DerriereTeamUX/index.astro
+++ b/src/components/pages/homepage/DerriereTeamUX/index.astro
@@ -208,7 +208,7 @@ const { block1, block2 } = data;
 </section>
 
 <style>
-  section :global([astro-icon="oval"]) {
+  section :global([data-icon="oval"]) {
     width: 100%;
     height: 10px;
 
@@ -218,7 +218,7 @@ const { block1, block2 } = data;
   }
 
   @screen 2xl {
-    section :global([astro-icon="oval"]) {
+    section :global([data-icon="oval"]) {
       height: 145px;
     }
   }
