--- a/src/components/pages/nos-deux-profils/ItsAMatch.astro
+++ b/src/components/pages/nos-deux-profils/ItsAMatch.astro
@@ -118,7 +118,7 @@ import TeamUXStamp from "components/TeamUXStamp.astro";
 </section>
 
 <style>
-  section :global([astro-icon="oval"]) {
+  section :global([data-icon="oval"]) {
     width: 100%;
     height: 10px;
 
@@ -128,7 +128,7 @@ import TeamUXStamp from "components/TeamUXStamp.astro";
   }
 
   @screen 2xl {
-    section :global([astro-icon="oval"]) {
+    section :global([data-icon="oval"]) {
       height: 145px;
     }
   }
