fix: revert to astro-icon v1

--- a/src/components/Header/Logo.astro
+++ b/src/components/Header/Logo.astro
@@ -22,7 +22,7 @@ const htmlAttributes =
 </a>
 
 <style>
-  :global([data-icon="logo"]) {
+  :global([astro-icon="logo"]) {
     width: 170px;
     height: 36px;
 
