--- a/src/components/pages/projets/AllProjects/LargeProject.astro
+++ b/src/components/pages/projets/AllProjects/LargeProject.astro
@@ -209,7 +209,7 @@ const hasManyTestimonials = Array.isArray(project.testimonial) && project.testim
 
 <style>
     .testimonials[open] {
-        :global([data-icon="expand_more"]) {
+        :global([astro-icon="expand_more"]) {
             transform: scaleY(-1);
         }
     }
