--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import "styles/base.css";
 
+import { Sprite } from "astro-icon";
 import Header from "components/Header/index.astro";
 import Toast from "components/Toast.astro";
 
@@ -73,12 +74,13 @@ const { title, description, og_description, og_title } = Astro.props;
     </style>
   </head>
   <body>
-    <Header />
+    <Sprite.Provider>
+      <Header />
 
-    <slot />
+      <slot />
 
-    <Toast />
-
+      <Toast />
+    </Sprite.Provider>
     <style is:global>
       body {
         @apply bg-surface1 text-secondary;
