--- a/src/components/pages/nos-deux-profils/ItsAMatch.astro
+++ b/src/components/pages/nos-deux-profils/ItsAMatch.astro
@@ -5,134 +5,119 @@ import Grid from "components/@common/Grid.astro";
 import CallToAction from "components/@common/CallToAction.astro";
 import Brush from "components/@common/Brush.astro";
 import TeamUXStamp from "components/TeamUXStamp.astro";
+import CurvedContainer from "components/CurvedContainer/index.astro";
 ---
 
 <section>
-  <Icon name="oval" />
-
-  <div class="bg-neutral4">
-    <div class="container">
-      <div class="pt-20 flex justify-center">
-        <TeamUXStamp />
-      </div>
-
-      <h3
-        class="mt-[60px] mb-5 lg:mb-10 text-headline-extra-large lg:text-display-small text-center"
-      >
-        {data.title}
-      </h3>
-      <Grid>
-        <p
-          class="col-span-full lg:col-start-4 lg:col-span-6 mb-10 text-body-large lg:text-body-extra-large lg:text-center"
-        >
-          {data.content}
-        </p>
-
-        <CallToAction
-          href="https://www.linkedin.com/company/team-ux/"
-          target="_blank"
-          type="secondary"
-          rightIcon="open_in_new"
-          class="col-span-full mx-auto mb-20"
-        >
-          Page LinkedIn de Team UX
-        </CallToAction>
-
-        <div
-          class="col-span-full sm:col-start-2 sm:col-span-4 lg:col-span-full xl:col-start-2 xl:col-span-10"
-        >
-          <div class="px-5 py-6 lg:p-10 bg-surface5 rounded-[26px]">
-            <h3 class="mb-10 text-headline-medium-bold">
-              Voici comment nous travaillons
-            </h3>
-            <ul
-              class="flex flex-col max-lg:space-y-11 lg:flex-row lg:space-x-11 items-center justify-between isolate"
-            >
-              <li>
-                <Brush
-                  id={1}
-                  class="absolute z-[-1] w-[100px] h-[119px] left-[50%] top-[-7px] -translate-x-1/2 opacity-20"
-                />
-                <Icon name="softskill-details" />
-                <span class="text-label-medium lg:text-label-large"
-                  >Sens du détail</span
-                >
-              </li>
-              <li>
-                <Brush
-                  id={1}
-                  class="absolute z-[-1] w-[100px] h-[119px] left-[50%] top-[-7px] rotate-[180deg] -translate-x-1/2 opacity-20"
-                />
-                <Icon name="softskill-kindness" />
-                <span class="text-label-medium lg:text-label-large"
-                  >Bienveillance</span
-                >
-              </li>
-              <li>
-                <Brush
-                  id={1}
-                  class="absolute z-[-1] w-[100px] h-[119px] left-[50%] top-[-7px] -translate-x-1/2 opacity-20"
-                />
-                <Icon name="softskill-fiability" />
-                <span class="text-label-medium lg:text-label-large"
-                  >Fiabilité</span
-                >
-              </li>
-              <li>
-                <Brush
-                  id={1}
-                  class="absolute z-[-1] w-[100px] h-[119px] left-[50%] top-[-7px] rotate-[180deg] -translate-x-1/2 opacity-20"
-                />
-                <Icon name="softskill-sincerity" />
-                <span class="text-label-medium lg:text-label-large"
-                  >Sincérité</span
-                >
-              </li>
-              <li>
-                <Brush
-                  id={1}
-                  class="absolute z-[-1] w-[100px] h-[119px] left-[50%] top-[-7px] -translate-x-1/2 opacity-20"
-                />
-                <Icon name="softskill-creative" />
-                <span class="text-label-medium lg:text-label-large"
-                  >Force de proposition</span
-                >
-              </li>
-            </ul>
-          </div>
+  <CurvedContainer>
+    <div class="bg-neutral4">
+      <div class="container">
+        <div class="pt-20 flex justify-center">
+          <TeamUXStamp />
         </div>
-      </Grid>
-      <div class="mt-10 lg:mt-[60px] pb-20 lg:pb-[100px]">
-        <CallToAction
-          href="/notre-manifeste"
-          type="primary"
-          rightIcon="forward"
-          class="mx-auto"
+
+        <h3
+          class="mt-[60px] mb-5 lg:mb-10 text-headline-extra-large lg:text-display-small text-center"
         >
-          Lire notre manifeste
-        </CallToAction>
+          {data.title}
+        </h3>
+        <Grid>
+          <p
+            class="col-span-full lg:col-start-4 lg:col-span-6 mb-10 text-body-large lg:text-body-extra-large lg:text-center"
+          >
+            {data.content}
+          </p>
+
+          <CallToAction
+            href="https://www.linkedin.com/company/team-ux/"
+            target="_blank"
+            type="secondary"
+            rightIcon="open_in_new"
+            class="col-span-full mx-auto mb-20"
+          >
+            Page LinkedIn de Team UX
+          </CallToAction>
+
+          <div
+            class="col-span-full sm:col-start-2 sm:col-span-4 lg:col-span-full xl:col-start-2 xl:col-span-10"
+          >
+            <div class="px-5 py-6 lg:p-10 bg-surface5 rounded-[26px]">
+              <h3 class="mb-10 text-headline-medium-bold">
+                Voici comment nous travaillons
+              </h3>
+              <ul
+                class="flex flex-col max-lg:space-y-11 lg:flex-row lg:space-x-11 items-center justify-between isolate"
+              >
+                <li>
+                  <Brush
+                    id={1}
+                    class="absolute z-[-1] w-[100px] h-[119px] left-[50%] top-[-7px] -translate-x-1/2 opacity-20"
+                  />
+                  <Icon name="softskill-details" />
+                  <span class="text-label-medium lg:text-label-large"
+                    >Sens du détail</span
+                  >
+                </li>
+                <li>
+                  <Brush
+                    id={1}
+                    class="absolute z-[-1] w-[100px] h-[119px] left-[50%] top-[-7px] rotate-[180deg] -translate-x-1/2 opacity-20"
+                  />
+                  <Icon name="softskill-kindness" />
+                  <span class="text-label-medium lg:text-label-large"
+                    >Bienveillance</span
+                  >
+                </li>
+                <li>
+                  <Brush
+                    id={1}
+                    class="absolute z-[-1] w-[100px] h-[119px] left-[50%] top-[-7px] -translate-x-1/2 opacity-20"
+                  />
+                  <Icon name="softskill-fiability" />
+                  <span class="text-label-medium lg:text-label-large"
+                    >Fiabilité</span
+                  >
+                </li>
+                <li>
+                  <Brush
+                    id={1}
+                    class="absolute z-[-1] w-[100px] h-[119px] left-[50%] top-[-7px] rotate-[180deg] -translate-x-1/2 opacity-20"
+                  />
+                  <Icon name="softskill-sincerity" />
+                  <span class="text-label-medium lg:text-label-large"
+                    >Sincérité</span
+                  >
+                </li>
+                <li>
+                  <Brush
+                    id={1}
+                    class="absolute z-[-1] w-[100px] h-[119px] left-[50%] top-[-7px] -translate-x-1/2 opacity-20"
+                  />
+                  <Icon name="softskill-creative" />
+                  <span class="text-label-medium lg:text-label-large"
+                    >Force de proposition</span
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+        </Grid>
+        <div class="mt-10 lg:mt-[60px] pb-20 lg:pb-[100px]">
+          <CallToAction
+            href="/notre-manifeste"
+            type="primary"
+            rightIcon="forward"
+            class="mx-auto"
+          >
+            Lire notre manifeste
+          </CallToAction>
+        </div>
       </div>
     </div>
-  </div>
-  <Icon name="oval" />
+  </CurvedContainer>
 </section>
 
 <style>
-  section :global([astro-icon="oval"]) {
-    width: 100%;
-    height: 10px;
-
-    &:last-of-type {
-      transform: scaleY(-1);
-    }
-  }
-
-  @screen 2xl {
-    section :global([astro-icon="oval"]) {
-      height: 145px;
-    }
-  }
-
   ul {
     & li {
       @apply relative flex flex-col items-center text-center whitespace-nowrap;
