--- a/src/components/@common/Icon.astro
+++ b/src/components/@common/Icon.astro
@@ -1,5 +1,5 @@
 ---
-import { Icon } from "astro-icon/components";
+import { Icon as AstroIcon } from "astro-icon/components";
 
 export interface Props {
   name:
@@ -15,16 +15,17 @@ export interface Props {
     | "quote"
     | "visibility"
     | "chevron_right_breadcrumb"
+    | "cross"
     | "arrow_up";
-  width: number;
-  height: number;
+  width?: number;
+  height?: number;
+  size?: number;
 }
 
 const { name, width, height, ...props } = Astro.props;
 ---
 
-<Icon
-  focusable="false"
+<AstroIcon
   aria-hidden="true"
   width={width}
   height={height}
