--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import "styles/base.css";
 
 import Header from "components/Header/index.astro";
 import Toast from "components/Toast.astro";
+import TeamUXIn2024Disclaimer from "../components/TeamUXIn2024Disclaimer.astro";
 
 interface Props {
   title: string;
@@ -73,6 +74,8 @@ const { title, description, og_description, og_title } = Astro.props;
     </style>
   </head>
   <body>
+    <TeamUXIn2024Disclaimer />
+
     <Header />
 
     <slot />
