--- a/src/components/TeamUXIn2024Disclaimer.astro
+++ b/src/components/TeamUXIn2024Disclaimer.astro
@@ -30,17 +30,17 @@ import Icon from "./@common/Icon.astro";
     </p>
     <br />
     <p>
-      Daniela intégrera une entreprise à mission, elle va rejoindre une grosse
-      équipe produit. Yuna poursuit son projet freelance en tant que designer
-      stratégique et UX senior et collabore d’ores-et-déjà avec de nouvelles
-      structures.
+      Daniela intègre une entreprise à mission, en rejoignant une grosse équipe
+      produit. Yuna poursuit son projet freelance en tant que designer
+      stratégique et UX senior et collabore avec nos clientes et clients ainsi
+      que de nouvelles structures.
     </p>
     <br />
     <p>
-      On remercie chaleureusement les dizaines de clientes et clients ainsi que
-      toutes les personnes qui ont accueilli avec enthousiasme notre projet
-      commun et nous ont suivies toutes ces années. On a adoré travailler avec
-      vous et avancer à vos côtés.
+      Nous remercions chaleureusement les dizaines de clientes et clients ainsi
+      que toutes les personnes qui ont accueilli avec enthousiasme notre projet
+      commun et nous ont suivies toutes ces années. Nous avons adoré travailler
+      avec vous et avancer à vos côtés.
     </p>
     <br />
     <p>Retrouvez-nous chacune sur nos comptes LinkedIn personnels :</p>
